--- a/src/content/blog/2015-03-22-ember-cli-testing-with-jenkins/index.mdx
+++ b/src/content/blog/2015-03-22-ember-cli-testing-with-jenkins/index.mdx
@@ -11,6 +11,11 @@ description: >-
 
 import MdxImage from "src/components/MdxImage.astro";
 import TestResults from "./assets/test-results.png";
+import ManageJenkins from "./assets/manage-jenkins.png";
+import NodeInstallations from "./assets/node-installations.png";
+import NodeConfiguration from "./assets/node-configuration.png";
+import FreestyleProject from "./assets/freestyle-project.png";
+import JobConfiguration from "./assets/job-configuration.png";
 
 This post will walk you through running [Ember CLI](http://www.ember-cli.com/)
 [testem](https://github.com/airportyh/testem) tests running with [Jenkins CI](https://jenkins-ci.org/).
@@ -33,15 +38,15 @@ You'll need a few plugins to run ember-cli on your Jenkins instance:
 
     - Navigate to Manage Jenkins
 
-      ![Manage Jenkins Button](/{% ministamp _images/posts/2015/03/manage-jenkins.png assets/images/posts/2015/03/manage-jenkins.png %})
+      <MdxImage src={ManageJenkins} alt="Manage Jenkins Button" />
 
     - Click NodeJS Installations
 
-      ![NodeJS Installations Button](/{% ministamp _images/posts/2015/03/node-installations.png assets/images/posts/2015/03/node-installations.png %})
+      <MdxImage src={NodeInstallations} alt="NodeJS Installations Button" />
 
     - Configure NodeJS Installation
 
-      ![NodeJS Plugin Configuration](/{% ministamp _images/posts/2015/03/node-configuration.png assets/images/posts/2015/03/node-configuration.png %})
+      <MdxImage src={NodeConfiguration} alt="NodeJS Plugin Configuration" />
 
       Choose "Install from nodejs.org" and choose a current version. You'll want to install ember-cli, phantom, and
       bower as global packages. You can see that I always peg the versions to prevent issues when a new version is
@@ -63,11 +68,13 @@ Now we're ready to configure our job to run our test suite.
 
 1.  Create a new job I've had the best luck with the Freestyle Projects.
 
-    ![Freestyle Project Radio Button](/{% ministamp _images/posts/2015/03/freestyle-project.png assets/images/posts/2015/03/freestyle-project.png %})
+    <MdxImage src={FreestyleProject} alt="Freestyle Project Radio Button" />
 
 2.  Configure the job
 
-    <a href='/assets/images/posts/2015/03/job-configuration.png' target='_blank' rel="noopener">![Sample Configuration Settings](/{% ministamp _images/posts/2015/03/job-configuration.png assets/images/posts/2015/03/job-configuration.png %})</a>
+    <a href="/assets/images/posts/2015/03/job-configuration.png" target="_blank" rel="noopener">
+      <MdxImage src={JobConfiguration} alt="Sample Configuration Settings" />
+    </a>
 
     - Setup the Git Repository
     - Check "Build when a change is pushed to GitHub"
