--- a/src/content/blog/2020-10-16-how-to-fix-circleci-dockerhub-too-many-requests-errors/index.mdx
+++ b/src/content/blog/2020-10-16-how-to-fix-circleci-dockerhub-too-many-requests-errors/index.mdx
@@ -8,6 +8,11 @@ description: >-
   Error response from Daemon: toomanyrequests: Too Many Requests.
 ---
 
+import MdxImage from "src/components/MdxImage.astro";
+import NewAccessToken from "./assets/new-access-token.png";
+import GeneratedAccessToken from "./assets/generated-access-token.png";
+import NewContext from "./assets/new-context.png";
+
 Beginning November 1, 2020, DockerHub will begin
 [rate-limiting anonymous image pulls](https://docs.docker.com/docker-hub/download-rate-limit/) from
 [DockerHub](https://hub.docker.com/).
