--- a/src/content/blog/2021-12-20-create-or-update-pr-comment/index.mdx
+++ b/src/content/blog/2021-12-20-create-or-update-pr-comment/index.mdx
@@ -115,5 +115,5 @@ update the existing comment with a new timestamp.
 ## Related Post
 
 If you're looking to build against the GitHub GraphQL API in TypeScript, check out my post
-["Adding Typescript Types to Github's GraphQL API"](/2020/05/16/adding-typescript-types-github-graphql-api/). This post
-describes how to gain type-safety when working with the GraphQL API.
+["Adding Typescript Types to Github's GraphQL API"](/blog/2020/05/16/adding-typescript-types-github-graphql-api/). This
+post describes how to gain type-safety when working with the GraphQL API.
