fix: migrate assets/attachments

--- a/src/content/blog/2011-05-02-hccpd-final-writeup/index.mdx
+++ b/src/content/blog/2011-05-02-hccpd-final-writeup/index.mdx
@@ -7,6 +7,8 @@ tags:
   - cu boulder
 ---
 
+import HccpdFinalWriteup from "./assets/hccpd_final_sp11.pdf";
+
 It's finally here! Today I'm officially done with college. My last requirement is to post my portfolio page which
 describes the work I've done in my Human Centered Computing Professional Development (HCCPD) over the past semester.
 
@@ -43,8 +45,7 @@ graduation. I worked specifically with Dirk Grunwald and John Black and the Comp
 the future of entrepreneurship and the CU Computer Science department. I hope to be invited to future advisory board
 meetings to stay involved with CU Computer Science.
 
-You can find my final presentation [here](/assets/attachments/2011/05/hccpd_final_sp11.pdf), though it's not very
-interesting without hearing my actual presentation. It shows a series of photos that represent what I've done over the
-semester.
+You can find my final presentation <a href={HccpdFinalWriteup}>here</a>, though it's not very interesting without
+hearing my actual presentation. It shows a series of photos that represent what I've done over the semester.
 
 Welp, I'm officially done with college! w00t!
