--- a/src/content/blog/2011-04-29-senior-project-done/index.mdx
+++ b/src/content/blog/2011-04-29-senior-project-done/index.mdx
@@ -10,6 +10,7 @@ description: >-
 
 import MdxImage from "src/components/MdxImage.astro";
 import WaldoFinalPicture from "./assets/WaldoFinalPicture.png";
+import FinalDemo from "./assets/FinalDemo.pdf";
 
 I still cannot believe that today is my last day of college. Time seriously flies. I thought I would update you all real
 quick on how our senior project ended up.
@@ -25,9 +26,9 @@ even though there were some challenges for the entire team getting used to the n
 project, we ended up with an awesome final result that won several awards including the senior project class award and
 1st place at the [ITLL Design Expo](https://calendar.colorado.edu/event/itl_design_expo).
 
-I've uploaded our [final presentation](/assets/attachments/2011/04/FinalDemo.pdf) in PDF format if you want to find out
-more about the project. The [presentation](/assets/attachments/2011/04/FinalDemo.pdf) includes some interesting
-architecture diagrams and screenshots so you can get an idea about what we've completed.
+I've uploaded our <a href={FinalDemo}>final presentation</a> in PDF format if you want to find out more about the
+project. The <a href={FinalDemo}>presentation</a> includes some interesting architecture diagrams and screenshots so you
+can get an idea about what we've completed.
 
 I'm officially a [CU](http://www.colorado.edu) alum in less than 72 hours! I'll keep you all up to date with what I'll
 be doing. Also if you have my old colorado.edu email address, my new email is ben at benlimmer.com. Update your address
