--- a/src/content/blog/2011-06-29-digitally-illiterate-kids-and-foss-in-schools/index.mdx
+++ b/src/content/blog/2011-06-29-digitally-illiterate-kids-and-foss-in-schools/index.mdx
@@ -8,6 +8,8 @@ description:
   (FOSS) software to save money while producing digitally literate students."
 ---
 
+import FossTransition from "./assets/FOSS_transition.pdf";
+
 I just finished reading this interesting [BBC News](http://news.bbc.co.uk/2/hi/programmes/click_online/9503255.stm)
 article asking if our children are becoming digitally illiterate. The TL;DR version of the article is that children are
 some of the biggest consumers of technology between video games and cell phones, but asks whether the technology
@@ -21,6 +23,6 @@ software such as the Office suite only reinforces the market dominance companies
 As I write this blog post, a paper I wrote and published in the CU Honor's Journal comes to mind. It proposes a rapid
 transition to FOSS in public schools. Not only would this save public schools huge amounts of money to support important
 programs such as the arts and sports, but it would also familiarize students more thoroughly with technology. I've
-uploaded my [entire proposal](/assets/attachments/2011/06/FOSS_transition.pdf) if you're interested in more specifics.
+uploaded my <a href={FossTransition}>entire proposal here</a> if you're interested in more specifics.
 
 What do you think about this idea and the claim of digital illiteracy among kids?
