review most blogs

--- a/src/content/blog/2017-04-23-macos-sierra-virtualbox-10-12-4/index.mdx
+++ b/src/content/blog/2017-04-23-macos-sierra-virtualbox-10-12-4/index.mdx
@@ -26,7 +26,9 @@ with this message:
 
 The install hangs on this error indefinitely:
 
-    IOConsoleUsers: gIOScreenLockState 3, hs 0, bs 0, now 0, sm 0x0
+```console
+IOConsoleUsers: gIOScreenLockState 3, hs 0, bs 0, now 0, sm 0x0
+```
 
 ## How to Fix It
 
