--- a/src/content/blog/2018-06-15-fixing-sennhesier-hd1-call-ended-issues/index.mdx
+++ b/src/content/blog/2018-06-15-fixing-sennhesier-hd1-call-ended-issues/index.mdx
@@ -17,11 +17,10 @@ import ZoomAudioSettings from "./assets/zoom_audio_settings.png";
 import AptX from "./assets/aptX.png";
 
 I recently purchased some
+<a title="As an Amazon Associate I earn from qualifying purchases" href="https://amzn.to/2t3QVLQ"> Sennheiser Wireless
+HD1 Headphones
 
-<a title="As an Amazon Associate I earn from qualifying purchases" href="https://amzn.to/2t3QVLQ">
-  Sennheiser Wireless HD1 Headphones
-</a>
-. They're a really nice set of headphones: excellent audio quality, active noise cancelling (ANC) and an integrated
+</a>. They're a really nice set of headphones: excellent audio quality, active noise cancelling (ANC) and an integrated
 microphone for making calls.
 
 ## The Problem
@@ -35,7 +34,7 @@ and I considered returning these otherwise great headphones.
 In short, the problem was that Spotify and Zoom were fighting over which app had control over the headphones. Spotify
 prefers to use a higher-quality codec called [aptX](https://en.wikipedia.org/wiki/AptX) for streaming music to the
 headphones. Zoom, on the other hand, needs to use
-[SCO](<https://en.wikipedia.org/wiki/List_of_Bluetooth_protocols#Synchronous_connection-oriented_(SCO)_link>) to
+[SCO](<https://en.wikipedia.org/wiki/List*of_Bluetooth_protocols#Synchronous_connection-oriented*(SCO)\_link>) to
 activate the microphone during the call.
 
 Anytime the codec switches, the "Call Ended" voice prompt is triggered. So, when I had my microphone muted for some
