--- a/src/content/blog/2020-10-23-make-pino-log-messages-appear-with-the-correct-status-in-datadog/index.mdx
+++ b/src/content/blog/2020-10-23-make-pino-log-messages-appear-with-the-correct-status-in-datadog/index.mdx
@@ -18,7 +18,7 @@ If you're using [pino](https://github.com/pinojs/pino) with
 [Datadog's Log Management product](https://docs.datadoghq.com/logs/), you might notice that all of your logs are
 reported at the `info` level, regardless of what log level you're using in your code.
 
-<MdxImage src={DdLogsInfoLevel} alt="screenshot of the datadog log UI showing all info-level messages" />
+<MdxImage src={DdLogsInfoLevel} alt="screenshot of the datadog log UI showing all info-level messages" width="1/3" />
 
 Having all logs categorized as `info`-level messages makes it challenging to find what you're looking for.
 
@@ -117,4 +117,5 @@ Now, new messages should appear with the proper status identified in the Datadog
 <MdxImage
   src={DdLogsMultipleLevels}
   alt="screenshot of the datadog log UI showing the proper log-levels being reported"
+  width="1/3"
 />
