--- a/src/content/blog/2017-08-03-understanding-github-pr-merge-options/index.mdx
+++ b/src/content/blog/2017-08-03-understanding-github-pr-merge-options/index.mdx
@@ -53,7 +53,7 @@ This material is intended to be helpful for novice and experienced practitioners
 
 ## The Video
 
-<div class="center">
+<div class="flex justify-center">
   <iframe
     width="560"
     height="315"
