fix: broken links

--- a/src/content/blog/2014-03-30-readytalk-ibotta.mdx
+++ b/src/content/blog/2014-03-30-readytalk-ibotta.mdx
@@ -16,8 +16,7 @@ external forces. It wasn't a high-school job, a summer internship, a senior proj
 of when it was time to head to the next experience.
 
 Making the decision to move to a new company was a really difficult decision. I've made a ton of great friends at
-ReadyTalk and learned how to put together all the pieces I
-[learned during my time at CU Boulder](/tags#cu%20boulder-ref).
+ReadyTalk and learned how to put together all the pieces I learned during my time at CU Boulder.
 
 ReadyTalk really is a great place to work. The people are some of the smartest, most caring people I've worked with so
 far in my career. They know how to have fun, and how to get high-quality products out the door. Not to mention, the
