--- a/src/content/blog/2015-04-22-installing-an-ember-addon-from-github/index.mdx
+++ b/src/content/blog/2015-04-22-installing-an-ember-addon-from-github/index.mdx
@@ -21,7 +21,7 @@ ember install <addon-name>
 ```
 
 However, sometimes you'll want to test against a specific branch, or commit from an add-on's GitHub project. Luckily,
-this is easy to do with [ember-cli](ember-cli.com).
+this is easy to do with [ember-cli](https://cli.emberjs.com).
 
 - Grab the https repository url from GitHub
 
