chore: archive old/irrelavant posts

--- a/src/content/blog/2011-03-12-long-time-no-talk.mdx
+++ b/src/content/blog/2011-03-12-long-time-no-talk.mdx
@@ -5,6 +5,7 @@ tags:
 description: >-
   A blog post by Ben Limmer about projects being worked in March, 2011 at CU Boulder
 overrideLastModified: "2020-05-03T14:57:55-06:00"
+archive: true
 ---
 
 Wow! It's been a long time since I've posted an update on my blog, so here's an update with what I've been up to. This
