--- a/src/content/blog/2010-10-17-learning-web-programming.mdx
+++ b/src/content/blog/2010-10-17-learning-web-programming.mdx
@@ -4,6 +4,7 @@ description: A guide to getting started with web programming
 tags:
   - web programming
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 Over the past month it has been my goal to learn more about web programming. The journey so far has involved lots of
