fix: archive more posts

--- a/src/content/blog/2011-03-22-job-search-update-finished.mdx
+++ b/src/content/blog/2011-03-22-job-search-update-finished.mdx
@@ -5,6 +5,7 @@ tags:
 description: >-
   A blog post by Ben Limmer updating readers about his acceptance of a job at ReadyTalk in Denver, Colorado, USA
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 Hello lovely people!
