--- a/src/content/blog/2011-04-30-distinguished-senior-awards-banquet/index.mdx
+++ b/src/content/blog/2011-04-30-distinguished-senior-awards-banquet/index.mdx
@@ -6,6 +6,7 @@ description: >-
   A description of the awards ceremony for Ben Limmer receiving the Distinguished Senior Graduate for Computer Science
   at CU Boulder in Boulder, Colorado, USA
 overrideLastModified: "2021-12-30T19:48:05-07:00"
+archive: true
 ---
 
 import MdxImage from "src/components/MdxImage.astro";
