--- a/src/content/blog/2011-05-02-hccpd-final-writeup/index.mdx
+++ b/src/content/blog/2011-05-02-hccpd-final-writeup/index.mdx
@@ -6,6 +6,7 @@ tags:
   - computer science
   - cu boulder
 overrideLastModified: "2020-05-03T14:57:55-06:00"
+archive: true
 ---
 
 import HccpdFinalWriteup from "./assets/hccpd_final_sp11.pdf";
