--- a/src/content/blog/2011-05-04-new-site-design/index.mdx
+++ b/src/content/blog/2011-05-04-new-site-design/index.mdx
@@ -4,6 +4,7 @@ description: A blog post about Ben Limmer redesigning his website
 tags:
   - web programming
 overrideLastModified: "2021-12-30T19:48:05-07:00"
+archive: true
 ---
 
 import MdxImage from "src/components/MdxImage.astro";
