--- a/src/content/blog/2011-05-14-google-page-speed.mdx
+++ b/src/content/blog/2011-05-14-google-page-speed.mdx
@@ -6,6 +6,7 @@ description: >-
 tags:
   - web programming
 overrideLastModified: "2020-05-03T14:57:55-06:00"
+archive: true
 ---
 
 I think this is a great find! A new Google Labs experimental feature called Google Page Speed will run an automated
