--- a/src/content/blog/2011-03-17-domino-award-call-for-entries.mdx
+++ b/src/content/blog/2011-03-17-domino-award-call-for-entries.mdx
@@ -5,6 +5,7 @@ tags:
   - cu boulder
 description: A call for entries for the 2011 Domino Award at CU Boulder
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 Just wanted to give those CU readers some information about an amazing opportunity called the Domino Award. The award is
