--- a/src/content/blog/2011-03-23-looking-for-a-job-or-summer-internship.mdx
+++ b/src/content/blog/2011-03-23-looking-for-a-job-or-summer-internship.mdx
@@ -4,6 +4,7 @@ tags:
   - job search
 description: A call for applicants for 2011 ReadyTalk summer interns
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 Hey everybody!
