--- a/src/content/blog/2011-04-08-graduation.mdx
+++ b/src/content/blog/2011-04-08-graduation.mdx
@@ -7,6 +7,7 @@ description: >-
   A blog post inviting friends an family to Ben Limmer's 2011 graduation from CU Boulder. He was recognized with the
   Outstanding graduate in Computer Science award, CU Engineering Outstanding Graudate for Service and Magna Cum Laude.
 overrideLastModified: "2020-05-03T14:57:55-06:00"
+archive: true
 ---
 
 That time of year is right around the corner - graduation. I absolutely can't believe that it has already been four
