--- a/src/content/blog/2011-04-26-final-xna-4-project.mdx
+++ b/src/content/blog/2011-04-26-final-xna-4-project.mdx
@@ -6,6 +6,7 @@ tags:
 description: >-
   A showcase of Ben Limmer's XBOX 360 programming class final project at CU Boulder
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 It's that time of year again - I'm finishing up with classes and thought I would post some links to things I've been
