--- a/src/content/blog/2011-04-29-senior-project-done/index.mdx
+++ b/src/content/blog/2011-04-29-senior-project-done/index.mdx
@@ -7,6 +7,7 @@ description: >-
   A blog post about Ben Limmer completing his senior project at CU Boulder, done in conjunction with Gold Systems in
   Boulder, Colorado, USA.
 overrideLastModified: "2021-12-30T19:48:05-07:00"
+archive: true
 ---
 
 import MdxImage from "src/components/MdxImage.astro";
