--- a/src/content/blog/2011-05-07-feature-in-the-daily-camera.mdx
+++ b/src/content/blog/2011-05-07-feature-in-the-daily-camera.mdx
@@ -6,6 +6,7 @@ tags:
 description: >-
   A description of Ben Limmer's feature in the Daily Camera newspaper in Boulder, Colorado, USA
 overrideLastModified: "2014-01-04T12:53:00-07:00"
+archive: true
 ---
 
 I was excited to hear from Brittany Anas, a Daily Camera staff writer, recently wanting to discuss what I will be up to
